添加项目文件。

--- a/Data structer.vcxproj
+++ b/Data structer.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="stack.cpp" />
+    <ClCompile Include="两栈共享空间.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
