--- a/Data structer.vcxproj.filters
+++ b/Data structer.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="stack.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="两栈共享空间.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
